[tool.poetry]
name = "slack-sdk-trial"
version = "0.1.0"
description = ""
authors = ["Takeo Imai <bonotake.oshigoto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.7.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
